Closed
Bug 824397
Opened 12 years ago
Closed 12 years ago
Use NS_ENSURE_TRUE_VOID(foo) instead of NS_ENSURE_TRUE(foo, )
Categories
(Core :: General, defect)
Core
General
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: n.nethercote, Assigned: n.nethercote)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
I just updated my Ubuntu installation to 12.10 and got a new clang, and now I'm getting failures like these:
/home/njn/moz/mi2/content/media/webm/WebMReader.cpp:1033:74: error: empty macro arguments are a C99 feature [-Werror,-Wc99-extensions]
NS_ENSURE_TRUE((uint32_t)aSubsegmentIdx < mClusterByteRanges.Length(), );
They're errors in some dirs and warnings in others, so there must be some WARNINGS_AS_ERRORS action happening. (I'm compiling with --enable-warnings-as-errors.)
![]() |
Assignee | |
Comment 2•12 years ago
|
||
Comment on attachment 695375 [details] [diff] [review]
Use NS_ENSURE_{TRUE,FALSE,SUCCESS}_VOID(foo) instead of NS_ENSURE_{TRUE,FALSE,SUCCESS}(foo, ).
This patch misses some that use /**/ (or varations) as the 2nd arg. I'll post a new version shortly.
Attachment #695375 -
Flags: review?(tterribe)
![]() |
Assignee | |
Comment 3•12 years ago
|
||
New version that converts the NS_ENSURE_TRUE(foo, /**/) cases too.
Attachment #695378 -
Flags: review?(tterribe)
![]() |
Assignee | |
Updated•12 years ago
|
Attachment #695375 -
Attachment is obsolete: true
Updated•12 years ago
|
Attachment #695378 -
Flags: review?(tterribe) → review+
Updated•12 years ago
|
Blocks: buildwarning
![]() |
Assignee | |
Comment 4•12 years ago
|
||
Comment 5•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•