media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp
@@ -572,7 +572,7 @@ PeerConnectionImpl::NotifyDataChannel(mozilla::DataChannel *aChannel)
    nsCOMPtr<nsIDOMDataChannel> domchannel;
    nsresult rv = NS_NewDOMDataChannel(aChannel, mWindow,
                                       getter_AddRefs(domchannel));
-  NS_ENSURE_SUCCESS(rv,);
+  NS_ENSURE_SUCCESS_VOID(rv);
 
   RUN_ON_THREAD(mThread,
                 WrapRunnableNM(NotifyDataChannel_m,
